// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree parsing 1`] = `
Array [
  Object {
    "name": "README.md",
    "path": "README.md",
    "type": "file",
  },
  Object {
    "name": "about.md",
    "path": "about.md",
    "type": "file",
  },
  Object {
    "name": "b.md",
    "path": "b.md",
    "type": "file",
  },
  Object {
    "children": Array [
      Object {
        "name": "index.md",
        "path": "blog/index.md",
        "type": "file",
      },
      Object {
        "name": "post-1.md",
        "path": "blog/post-1.md",
        "type": "file",
      },
      Object {
        "name": "post-2.mdx",
        "path": "blog/post-2.mdx",
        "type": "file",
      },
      Object {
        "name": "post-3.md",
        "path": "blog/post-3.md",
        "type": "file",
      },
    ],
    "name": "blog",
    "path": "blog",
    "type": "dir",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "name": "[a] install.md",
            "path": "docs/[0] getting-started/[a] install.md",
            "type": "file",
          },
          Object {
            "name": "[b] setup.md",
            "path": "docs/[0] getting-started/[b] setup.md",
            "type": "file",
          },
          Object {
            "name": "_draft.md",
            "path": "docs/[0] getting-started/_draft.md",
            "type": "file",
          },
          Object {
            "name": "index.md",
            "path": "docs/[0] getting-started/index.md",
            "type": "file",
          },
        ],
        "name": "[0] getting-started",
        "path": "docs/[0] getting-started",
        "type": "dir",
      },
      Object {
        "children": Array [
          Object {
            "name": "[a] get-static-paths.md",
            "path": "docs/[1] api/[a] get-static-paths.md",
            "type": "file",
          },
          Object {
            "name": "[b] get-static-props.md",
            "path": "docs/[1] api/[b] get-static-props.md",
            "type": "file",
          },
          Object {
            "name": "_index.md",
            "path": "docs/[1] api/_index.md",
            "type": "file",
          },
        ],
        "name": "[1] api",
        "path": "docs/[1] api",
        "type": "dir",
      },
      Object {
        "children": Array [
          Object {
            "name": "[a] dynamic-routes.md",
            "path": "docs/[2] examples/[a] dynamic-routes.md",
            "type": "file",
          },
          Object {
            "name": "[b] blog.md",
            "path": "docs/[2] examples/[b] blog.md",
            "type": "file",
          },
          Object {
            "name": "[c] mdx-support.md",
            "path": "docs/[2] examples/[c] mdx-support.md",
            "type": "file",
          },
        ],
        "name": "[2] examples",
        "path": "docs/[2] examples",
        "type": "dir",
      },
    ],
    "name": "docs",
    "path": "docs",
    "type": "dir",
  },
  Object {
    "children": Array [
      Object {
        "name": "README.md",
        "path": "path/README.md",
        "type": "file",
      },
      Object {
        "name": "_draft.md",
        "path": "path/_draft.md",
        "type": "file",
      },
      Object {
        "name": "c.md",
        "path": "path/c.md",
        "type": "file",
      },
      Object {
        "children": Array [
          Object {
            "name": "_draft.md",
            "path": "path/to/_draft.md",
            "type": "file",
          },
          Object {
            "name": "_index.md",
            "path": "path/to/_index.md",
            "type": "file",
          },
          Object {
            "name": "e.mdx",
            "path": "path/to/e.mdx",
            "type": "file",
          },
          Object {
            "name": "f.md",
            "path": "path/to/f.md",
            "type": "file",
          },
        ],
        "name": "to",
        "path": "path/to",
        "type": "dir",
      },
    ],
    "name": "path",
    "path": "path",
    "type": "dir",
  },
]
`;

exports[`flat files file and dirs with nested files 1`] = `
Array [
  Object {
    "name": "about",
    "path": "about",
    "type": "file",
  },
  Object {
    "name": "file1",
    "path": "docs/file1",
    "type": "file",
  },
  Object {
    "name": "file2",
    "path": "docs/file2",
    "type": "file",
  },
  Object {
    "name": "file1",
    "path": "blog/file1",
    "type": "file",
  },
]
`;

exports[`flat files file in a subfolder 1`] = `
Array [
  Object {
    "name": "file1",
    "path": "docs/subfolder/file1",
    "type": "file",
  },
]
`;

exports[`flat files only files 1`] = `
Array [
  Object {
    "name": "file1",
    "path": "file1",
    "type": "file",
  },
  Object {
    "name": "file2",
    "path": "file2",
    "type": "file",
  },
]
`;
